# codex

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTINUE_AUTO_DRIVE.md  DEAD_CODE_INVENTORY.md  DEVELOPING.md  FORK_SETUP.md  IIFE_FIX_SUMMARY.md  INVESTIGATION_SUMMARY.md  MERGE.md  PR_BODY.md  README.md  REPORT_issues.md  ROADMAP.md  TEST_SUITE_RESET.md  THEME_CONFIG.md  TODO.md  UPSTREAM_PARITY_CHECKLIST.md  analyze_sccache_issue.md  build-fast.sh  build-prod.sh  code-output.txt  codex-orchestration-plan.md  config.toml.example  find-chrome-ports.sh  flake.nix  issue-responses.md  migrate_to_trait.sh  package-lock.json  package.json  pnpm-lock.yaml  profile.sh  stripe_click_fixed.js  test-version-embedding.sh  test_browser.sh  test_debug.sh  test_debug_simple.sh  test_iife  test_iife.js  (+6 more)
code-rs/: Cargo.toml  README.md  config.md  default.nix  justfile
code-rs/ansi-escape/: Cargo.toml
code-rs/ansi-escape/src/: lib.rs
code-rs/app-server/: Cargo.toml
code-rs/app-server-protocol/: Cargo.toml
code-rs/app-server-protocol/src/: lib.rs
code-rs/app-server/src/: code_message_processor.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs
code-rs/apply-patch/: Cargo.toml
code-rs/apply-patch/src/: main.rs  tree_sitter_utils.rs
code-rs/arg0/: Cargo.toml
code-rs/arg0/src/: lib.rs
code-rs/backend-client/: Cargo.toml
code-rs/backend-client/src/: client.rs  lib.rs  types.rs
code-rs/browser/: Cargo.toml
code-rs/browser/src/: assets.rs  global.rs  lib.rs  manager.rs  page.rs
code-rs/chatgpt/: Cargo.toml
code-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
code-rs/cli/: Cargo.toml
code-rs/cli/src/: debug_sandbox.rs  lib.rs  llm.rs  login.rs  main.rs  mcp_cmd.rs  proto.rs
code-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
code-rs/cloud-tasks/: Cargo.toml
code-rs/cloud-tasks-client/: Cargo.toml
code-rs/cloud-tasks-client/src/: http.rs  lib.rs
code-rs/cloud-tasks/src/: app.rs  cli.rs  lib.rs  new_task.rs  ui.rs  util.rs
code-rs/cloud-tasks/tests/: env_filter.rs
code-rs/code-auto-drive-core/: Cargo.toml
code-rs/code-auto-drive-core/src/: auto_compact.rs  auto_coordinator.rs  auto_drive_history.rs  controller.rs  coordinator_router.rs  coordinator_user_schema.rs  faults.rs  lib.rs  session_metrics.rs
code-rs/code-auto-drive-diagnostics/: Cargo.toml
code-rs/code-auto-drive-diagnostics/src/: lib.rs
code-rs/code-backend-openapi-models/: Cargo.toml
code-rs/code-version/: Cargo.toml  build.rs
code-rs/code-version/src/: lib.rs
code-rs/common/: Cargo.toml
code-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  elapsed.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
code-rs/core/: Cargo.toml  README.md  gpt_5_code_prompt.md  prompt_coder.md  prompt_coordinator.md
code-rs/core/src/: account_usage.rs  acp.rs  agent_defaults.rs  agent_tool.rs  apply_patch.rs  auth.rs  auth_accounts.rs  chat_completions.rs  client.rs  client_common.rs  codex.rs  config.rs  config_edit.rs  config_types.rs  conversation_history.rs  conversation_manager.rs  custom_prompts.rs  debug_logger.rs  default_client.rs  dry_run_guard.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  function_tool.rs  git_info.rs  landlock.rs  (+30 more)
code-rs/docs/: codex_mcp_interface.md
code-rs/exec/: Cargo.toml
code-rs/execpolicy/: Cargo.toml  README.md
code-rs/file-search/: Cargo.toml  README.md
code-rs/git-apply/: Cargo.toml
code-rs/git-tooling/: Cargo.toml  README.md
code-rs/linux-sandbox/: Cargo.toml
code-rs/login/: Cargo.toml
code-rs/mcp-client/: Cargo.toml
code-rs/mcp-server/: Cargo.toml
code-rs/mcp-smoke/: Cargo.toml
code-rs/mcp-test-server/: Cargo.toml
code-rs/mcp-types/: Cargo.toml
code-rs/ollama/: Cargo.toml
code-rs/otel/: Cargo.toml
code-rs/process-hardening/: Cargo.toml
code-rs/protocol/: Cargo.toml
code-rs/protocol-ts/: Cargo.toml
code-rs/responses-api-proxy/: Cargo.toml  README.md
code-rs/rmcp-client/: Cargo.toml
code-rs/scripts/: create_github_release
code-rs/tui/: Cargo.toml  build.rs
codex-rs/: AGENTS.md  Cargo.toml  Cargo.toml.bak  README.md  build-fast.sh  config.md  default.nix  justfile
codex-rs/.config/: nextest.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml
codex-rs/backend-client/: Cargo.toml
codex-rs/browser/: Cargo.toml
codex-rs/chatgpt/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/cloud-tasks-client/: Cargo.toml
codex-rs/codex-backend-openapi-models/: Cargo.toml
codex-rs/codex-version/: Cargo.toml  build.rs
codex-rs/common/: Cargo.toml
codex-rs/core/: Cargo.toml  README.md  config_template.toml  gpt_5_codex_prompt.md  init.md  prompt.md  prompt_coder.md
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml  README.md
codex-rs/execpolicy-legacy/: Cargo.toml
codex-rs/execpolicy2/: README.md
codex-rs/file-search/: Cargo.toml
codex-rs/git-apply/: Cargo.toml
codex-rs/git-tooling/: Cargo.toml  README.md
codex-rs/interactive/: Cargo.toml
codex-rs/keyring-store/: Cargo.toml
codex-rs/linux-sandbox/: Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-smoke/: Cargo.toml
codex-rs/mcp-test-server/: Cargo.toml
codex-rs/mcp-types/: generate_mcp_types.py
codex-rs/ollama/: Cargo.toml
codex-rs/otel/: Cargo.toml
codex-rs/process-hardening/: Cargo.toml
codex-rs/protocol/: Cargo.toml
codex-rs/protocol-ts/: Cargo.toml
codex-rs/repl/: Cargo.toml
codex-rs/responses-api-proxy/: README.md
codex-rs/rmcp-client/: Cargo.toml
codex-rs/scripts/: create_github_release  create_github_release.sh
codex-rs/session/: Cargo.toml  build.rs
codex-rs/tui/: Cargo.toml  HISTORY_CELLS_PLAN.md  build.rs
codex-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
(+1551 files in other folders)
