[package]
edition = "2024"
name = "code-arg0"
version = { workspace = true }

[lib]
name = "code_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
code-apply-patch = { workspace = true }
code-core = { workspace = true }
code-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
