[package]
edition = "2024"
name = "code-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
code-common = { workspace = true, features = ["cli"] }
code-core = { workspace = true }
code-protocol = { workspace = true }
code-app-server-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
code-git-apply = { path = "../git-apply" }

[dev-dependencies]
tempfile = { workspace = true }
