[package]
edition = "2024"
name = "code-cli"
version = { workspace = true }

[[bin]]
name = "code"
path = "src/main.rs"

[lib]
name = "code_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
code-app-server = { workspace = true }
code-arg0 = { workspace = true }
code-chatgpt = { workspace = true }
code-common = { workspace = true, features = ["cli"] }
code-core = { workspace = true }
code-exec = { workspace = true }
code-login = { workspace = true }
code-mcp-server = { workspace = true }
code-process-hardening = { workspace = true }
code-protocol = { workspace = true }
code-app-server-protocol = { workspace = true }
code-protocol-ts = { workspace = true }
code-responses-api-proxy = { workspace = true }
code-tui = { workspace = true }
code-version = { path = "../code-version" }
code-cloud-tasks = { workspace = true }
ctor = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
regex = "1"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = { workspace = true }
uuid = { version = "1", features = ["v4"] }
which = { workspace = true }
owo-colors = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
