[package]
name = "code-cloud-tasks-client"
version = { workspace = true }
edition = "2024"

[lib]
name = "code_cloud_tasks_client"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = ["online"]
online = ["dep:code-backend-client"]
mock = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
diffy = "0.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
code-backend-client = { path = "../backend-client", optional = true }
code-git-apply = { path = "../git-apply" }
