[package]
name = "code-auto-drive-diagnostics"
edition = "2024"
version = { workspace = true }

[lib]
name = "code_auto_drive_diagnostics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
code-auto-drive-core = { path = "../code-auto-drive-core" }
code-core = { path = "../core" }
code-protocol = { path = "../protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
