[package]
edition = "2024"
name = "code-common"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"], optional = true }
code-core = { workspace = true }
code-protocol = { workspace = true }
code-app-server-protocol = { workspace = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "serde", "toml"]
elapsed = []
sandbox_summary = []
