[package]
edition = "2024"
name = "code-execpolicy"
version = { workspace = true }

[[bin]]
name = "code-execpolicy"
path = "src/main.rs"

[lib]
name = "code_execpolicy"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-execpolicy = { workspace = true }
