[package]
edition = "2024"
name = "code-login"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
code-core = { workspace = true }
code-app-server-protocol = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tiny_http = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
url = { workspace = true }
urlencoding = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
