[package]
edition = "2024"
name = "code-ollama"
version = { workspace = true }

[lib]
name = "code_ollama"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
bytes = { workspace = true }
code-core = { workspace = true }
futures = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
wiremock = { workspace = true }

[dev-dependencies]
