[package]
edition = "2024"
name = "codex-browser"
version = { workspace = true }

[lib]
name = "codex_browser"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
chromiumoxide_types = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
once_cell = "1.20"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
