[package]
name = "codex-common"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"], optional = true }
codex-core = { path = "../core" }
toml = { version = "0.8", optional = true }
serde = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "toml", "serde"]
elapsed = []

# Helper functionality for querying the list of available models from a model
# provider. This is intentionally behind a separate opt-in feature so that
# downstream crates that do not need it avoid pulling in the additional heavy
# dependencies (`reqwest`, etc.).
model-list = ["reqwest"]
