[package]
name = "codex-common"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"], optional = true }
codex-core = { path = "../core" }
dotenvy = { version = "0.15.7", optional = true }
toml = { version = "0.9", optional = true }
serde = { version = "1", optional = true }

[features]
# Separate feature so that `clap` is not a mandatory dependency.
cli = ["clap", "dotenvy", "toml", "serde"]
elapsed = []
sandbox_summary = []
